Various UI fixes (#6)
Note: Aligned search bar to the right
Commits list:
* Revert "Added carousel to Shop page"

This reverts commit 0cac0c0e6ae4d5efa8ec29aef4279ec6c66f6379.

Re-enable the "fancy scroll" effect, as well as the carousel

* Bring my efforts back to life. (fancy scroll + carousel)
F**k zack

* Fixed weird carousel hovering

* Added banner for hot products

* Fixed fade arrow behaviour

* added guide when user drags the scrollbar

* Fixed various UI bugs

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -1,11 +1,30 @@
+.first {
+    position: relative;
+    display: flex;
+    width: 100%;
+}
+
+.first header {
+    width: fit-content;
+    padding: 2px;
+}
+
+.first header h1 {
+    text-orientation: upright;
+    writing-mode: vertical-lr;
+    text-align: start;
+    font-size: 32px;
+    width: fit-content;
+}
+
 .carousel {
     position: relative;
     z-index: 1;
     
     box-sizing: border-box;
     height: calc(100vh - var(--nav-height));
-    width: 90%;
-    margin: 0 auto;
+    width: 80%;
+    margin: 0 2% 0 4%;
 
     background-color: burlywood;
     /* Header's style */
